#58: Make logging in a POST request
